<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>twist_stamper_cpp</name>
  <version>0.0.1</version>
  <description> ROS2 package for converting Twist messages to TwistStamped written in C++</description>
  <maintainer email="sanchez.guido@gmail.com">Guido Sanchez</maintainer>
  <license>Apache License 2.0</license>

  <url type="bugtracker">https://github.com/gmsanchez/twist_stamper_cpp/issues</url>
  <url type="repository">https://github.com/gmsanchez/twist_stamper_cpp</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
